--- a/css/style.css
+++ b/css/style.css
@@ -8,11 +8,11 @@
   --color-text: var(--color-white);
 
   /* Colors */
-  --color-white: #ffffff
-  --color-black: #050a13#
-  --color-blue: #03e8f9
-  --color-orange: #fd6413
-  --color-gray: #1b1e26
+  --color-white: #ffffff;
+  --color-black: #050a13;
+  --color-blue: #03e8f9;
+  --color-orange: #fd6413;
+  --color-gray: #1b1e26;
 }
 
 *{
@@ -21,6 +21,7 @@
 
 body{
   font-family: 'Open Sans', sans-serif;
+  margin: 0;
 }
 
 h1, h2, h3, p, ul{
@@ -45,4 +46,111 @@ button{
 
 button:focus{
   outline: 1px solid var(--color-accent);
+}
+
+/* Common */
+.section{
+  padding: 4rem;
+  text-align: center;
+}
+
+/* Header */
+.header{
+  background-color: #050a13;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  padding: 1rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.title{
+  font-size: 2.5rem;
+  margin: 1rem 0;
+}
+
+.description{
+  font-size: 1.5rem;
+  margin: 0.5rem 0;
+}
+
+.header__logo{
+  display: flex;
+  align-items: center;
+  gap: 8px;
+}
+
+.header__logo__img{
+  width: 36px;
+  height: 36px;
+}
+
+.header__logo__title{
+  font-size: 1.8rem;
+}
+
+.header__menu{
+  display: flex;
+  gap: 4px;
+}
+
+.header__menu__item{
+  padding: 8px 16px;
+}
+
+.header__menu__item:hover{
+  border-bottom: 1px solid var(--color-accent);
+}
+
+.header__menu__item.active{
+  border: 1px solid var(--color-accent);
+  border-radius: 4px;
+}
+
+/* Home */
+#home{
+  background-color: var(--color-primary);
+  color: var(--color-text);
+  padding: 5rem 1rem;
+  padding-top: 7rem;
+  text-align: center;
+}
+
+.home__avatar{
+  width: 250px;
+  height: 250px;
+  object-fit: cover;
+  border-radius: 100%;
+  border: 3px solid var(--color-accent);
+}
+
+.home__title{
+  font-size: 3rem;
+  margin-bottom: ;
+}
+
+.home__title--strong{
+  color: var(--color-accent);
+}
+
+.home__description{
+  font-size: 1.3rem;
+}
+
+.home__contact{
+  display: inline-block;
+  background-color: var(--color-accent);
+  color: var(--color-black);
+  margin: 2rem;
+  padding: 0.5rem 1rem;
+  font-weight: bold;
+  border-radius: 4px;
+}
+
+.home__contact:hover{
+  background-color: transparent;
+  color: var(--color-text);
+  outline: 2px solid var(--color-accent);
 }
