--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,9 @@
   --color-blue: #03e8f9;
   --color-orange: #fd6413;
   --color-gray: #1b1e26;
+  
+  /* Size */
+  --size-max-width: 1200px;
 }
 
 *{
@@ -54,6 +57,21 @@ button:focus{
   text-align: center;
 }
 
+.title{
+  font-size: 2.5rem;
+  margin: 1rem 0;
+}
+
+.description{
+  font-size: 1.5rem;
+  margin: 0.5rem 0;
+}
+
+.max-container{
+  max-width: var(--size-max-width);
+  margin: auto;
+}
+
 /* Header */
 .header{
   background-color: #050a13;
@@ -64,16 +82,6 @@ button:focus{
   display: flex;
   justify-content: space-between;
   align-items: center;
-}
-
-.title{
-  font-size: 2.5rem;
-  margin: 1rem 0;
-}
-
-.description{
-  font-size: 1.5rem;
-  margin: 0.5rem 0;
 }
 
 .header__logo{
@@ -153,4 +161,118 @@ button:focus{
   background-color: transparent;
   color: var(--color-text);
   outline: 2px solid var(--color-accent);
+}
+
+/* About */
+.majors{
+  display: flex;
+  justify-content: space-between;
+  gap: 1rem;
+  margin: 2.5rem 0;
+}
+
+.major{
+  background-color: var(--color-primary-variant);
+  padding: 2rem 1rem;
+  color: var(--color-text);
+  border-radius: 1rem;
+  cursor: default;
+  box-shadow: 4px 8px 8px rgba(0, 0, 0, 0.38);
+}
+
+.major__icon{
+  font-size: 4rem;
+  margin: 1rem 0;
+  color: var(--color-accent);
+  transition: all 300ms ease;
+}
+
+.major__title{
+  font-size: 1.5rem;
+  font-weight: bold;
+  margin-bottom: 1rem ;
+}
+
+.major:hover .major__icon{
+  transform: rotate(-15deg) scale(1.2);
+}
+
+.jobs{
+  text-align: start;
+}
+
+.job{
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  margin-bottom: 1rem;
+}
+
+.job__name{
+  color: var(--color-primary);
+}
+
+.job__period{
+  color: var(--color-primary);
+  font-size: 0.8rem;
+}
+
+/* Skills */
+#skills{
+  background-color: var(--color-primary-variant);
+  color: var(--color-text);
+}
+
+.skills{
+  display: grid;
+  grid-template-columns: 6fr 4fr;
+  margin: 2rem 3rem;
+  border-radius: 8px;
+  overflow: hidden;
+  box-shadow: 0 2.8px 2.2px rgba(0, 0, 0, 0.034), 0 6.7px 5.3px rgba(0, 0, 0, 0.048), 0 12.5px 10px rgba(0, 0, 0, 0.06), 0 22.3px 17.9px rgba(0, 0, 0, 0.072), 0 41.8px 33.4px rgba(0, 0, 0, 0.086), 0 100px 80px rgba(0, 0, 0, 0.12)
+}
+
+.skills__title{
+  color: var(--color-accent);
+  margin: 1rem 0;
+  font-size: 1.2rem;
+}
+
+.skills__coding{
+  grid-row: span 2;
+  padding: 1rem;
+  background-color: var(--color-primary);
+}
+
+.skills__tools{
+  padding: 1rem;
+  background-color: var(--color-primary);
+  filter: brightness(150%);
+}
+
+.skills__etc{
+  padding: 1rem;
+}
+
+.bar{
+  display: flex;
+  flex-direction: column;
+  padding: 1rem;
+  gap: 0.5rem;
+}
+
+.bar__metadata{
+  display: flex;
+  justify-content: space-between;
+}
+
+.bar__bg{
+  width: 100%;
+  height: 3px;
+  background-color: var(--color-primary-variant);
+}
+
+.bar__value{
+  height: 3px;
+  background-color: var(--color-accent);
 }
