--- a/css/style.css
+++ b/css/style.css
@@ -48,7 +48,7 @@ button{
 }
 
 button:focus{
-  outline: 1px solid var(--color-accent);
+  outline: 1px solid transparent;
 }
 
 /* Common */
@@ -73,8 +73,16 @@ button:focus{
 }
 
 /* Header */
+.header__toggle{
+  display: none;
+  color: var(--color-white);
+  font-size: 1.5rem;
+  position: absolute;
+  top: 1rem;
+  right: 1rem;
+}
 .header{
-  background-color: #050a13;
+  background-color: transparent;
   position: fixed;
   top: 0;
   width: 100%;
@@ -83,6 +91,12 @@ button:focus{
   justify-content: space-between;
   align-items: center;
   z-index: 1;
+  transition: all 300ms ease;
+}
+
+.header--dark{
+  background-color: var(--color-primary);
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
 .header__logo{
@@ -106,7 +120,9 @@ button:focus{
 }
 
 .header__menu__item{
+  display: block;
   padding: 8px 16px;
+  border-bottom: 1px solid transparent;
 }
 
 .header__menu__item:hover{
@@ -423,6 +439,7 @@ button:focus{
   border-radius: 100%;
   text-align: center;
   box-shadow: 5px 5px 0px 0px var(--color-accent);
+  transition: opacity 300ms ease-in;
 }
 
 /* Footer */
@@ -449,7 +466,7 @@ button:focus{
 
 @media screen and (max-width: 768px){
   .section{
-    padding: 3rem 2rem;
+    padding: 4rem 2rem;
   }
 
   .title{
@@ -463,13 +480,23 @@ button:focus{
   .header{
     flex-direction: column;
     align-items: start;
+    background-color: var(--color-primary);
+  }
+
+  .header__toggle{
+    display: block;
   }
 
   .header__menu{
+    display: none;
     flex-direction: column;
     text-align: center;
-    padding: 1rem 4rem;
+    margin: 1rem 4rem;
     gap: 1rem;
+  }
+
+  .header__menu.open{
+    display: flex;
   }
 
   .header__nav{
