--- a/css/style.css
+++ b/css/style.css
@@ -140,11 +140,33 @@ button:focus{
 
 /* Home */
 #home{
+  position: relative;
   background-color: var(--color-primary);
   color: var(--color-text);
   padding: 5rem 1rem;
   padding-top: 7rem;
   text-align: center;
+}
+
+.home__divider {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  overflow: hidden;
+  line-height: 0;
+  transform: rotate(180deg);
+}
+
+.home__divider svg {
+  position: relative;
+  display: block;
+  width: calc(100% + 1.3px);
+  height: 60px;
+}
+
+.home__divider .shape-fill {
+  fill: #FFFFFF;
 }
 
 .home__avatar{
@@ -240,8 +262,30 @@ button:focus{
 
 /* Skills */
 #skills{
+  position: relative;
   background-color: var(--color-primary-variant);
   color: var(--color-text);
+}
+
+.skills__divider {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  overflow: hidden;
+  line-height: 0;
+  transform: rotate(180deg);
+}
+
+.skills__divider svg {
+  position: relative;
+  display: block;
+  width: calc(118% + 1.3px);
+  height: 60px;
+}
+
+.skills__divider .shape-fill {
+  fill: var(--color-primary);
 }
 
 .skills{
@@ -391,7 +435,7 @@ button:focus{
   transform: translateY(0px);
 }
 
-.project__title:after{
+.project__title::after{
   content: '';
   display: block;
   position: relative;
@@ -454,8 +498,29 @@ button:focus{
 
 /* Footer */
 #contact{
+  position: relative;
   background-color: var(--color-primary);
   color: var(--color-text);
+}
+
+.contact__divider {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  overflow: hidden;
+  line-height: 0;
+}
+
+.contact__divider svg {
+  position: relative;
+  display: block;
+  width: calc(100% + 1.3px);
+  height: 73px;
+}
+
+.contact__divider .shape-fill {
+  fill: #FFFFFF;
 }
 
 .contact__links{
